--- a/css/bps.css
+++ b/css/bps.css
@@ -39,8 +39,8 @@
 }
 
 body {
-  font-family: 'Roboto', Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 15px;
+  font-family: 'GothamBook', Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
   line-height: 1.42857143;
   color: #333333;
 }
