--- a/css/bps.css
+++ b/css/bps.css
@@ -1,4 +1,5 @@
 /*@import url(http://fonts.googleapis.com/css?family=Roboto:400,700);*/
+@import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700');
 @font-face {
     font-family: 'gotam';
     src: url('../addons/fonts/Gotham-Light.otf');
@@ -48,8 +49,8 @@
 }
 
 body {
-  font-family: 'OpenSans', Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 13px;
+  font-family: 'Roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
   line-height: 1.42857143;
   color: #333333;
 }
